--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header{
     left: 114px;
     top: 134px;
     
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Times New Roman';
     font-weight: bold;
     font-size: 140px;
     line-height: 126.86%;
@@ -36,6 +36,8 @@ header{
     
     color: #1C1A1A;
     
+
+
 }
 
 h2{
@@ -67,15 +69,32 @@ height: 366px;
 left: calc(50% - 807px/2 - 18.5px);
 top: calc(50% - 366px/2 + 253px);
 
-font-family: Pirata One;
+font-family: Arial, Helvetica, sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 99px;
-line-height: 127px;
+line-height: 114px;
 display: flex;
 align-items: center;
 text-align: center;
 
 color: #6B6B6B;
     
+}
+
+h3{
+    position: absolute;
+width: 353.07px;
+height: 303.6px;
+left: 57px;
+top: 986px;
+}
+
+h5{
+    position: absolute;
+width: 1359.39px;
+height: 993.77px;
+left: 373px;
+top: 446px;
+
 }
