--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ margin:58px;
 .my-other-box {
     position: absolute;
     width: 1330px;
-    height: 1330px;
+    height: 550px;
     left: 57px;
     top: 54px;
     right: 57px;
@@ -25,7 +25,7 @@ header{
     
     font-family:'Times New Roman';
     font-weight: bold;
-    font-size: 140px;
+    font-size: 160px;
     line-height: 126.86%;
     /* or 228px */
     
@@ -34,14 +34,14 @@ header{
     text-align: center;
     letter-spacing: 0.24em;
     
-    color: #1C1A1A;
+    color: #FCFCFC;
     
 
 
 }
 
 h2{
-    position: absolute;
+position:center;
 width: 898px;
 height: 668px;
 left: calc(60% - 898px/2 - 19px);
@@ -62,8 +62,7 @@ color: #5A5454;
 }
 
 h4{
-    
-position: absolute;
+position:center;
 width: 807px;
 height: 366px;
 left: calc(50% - 807px/2 - 18.5px);
